@@ -64,6 +64,8 @@ Ver.5.6 (in development)
 - [BUG FIX] Add including path for phpseclib.
 - [BUG FIX] Pagination bar wasn't updated when the search button which data-im is '_@update:xxx.'
 - [BUG FIX] In same case, the LIMIT parameter of non paging context set to the pagination length.
+- [SECURITY FIX] The resetpassword.php in Auth_Support/PasswordReset folder had security issues.
+  If you use the resetpassword.php file in your solution. we'd like to replace the fixed version.
 - [FYI] The file Samples/sample_memo_html5.html is removed. It wasn't working in long time.
 
 Ver.5.5 (October 13, 2016)
